<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/bgmin"
    tools:context="com.example.ht.citizenservice.Monument">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:id="@+id/place1"
            android:background="@drawable/complaintsview"
            android:weightSum="2">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:src="@drawable/monumentamberpalace"
                android:scaleType="fitXY"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title1"
                android:textAllCaps="false"
                android:id="@+id/name1"
                android:gravity="center"
                android:textSize="25sp"
                android:layout_marginRight="10dp"
                android:textColor="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:id="@+id/place2"
            android:background="@drawable/complaintsview"
            android:weightSum="2">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:src="@drawable/monumentbirlaauditorium"
                android:scaleType="fitXY"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title2"
                android:textAllCaps="false"
                android:id="@+id/name2"
                android:gravity="center"
                android:textSize="25sp"
                android:layout_marginRight="10dp"
                android:textColor="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:id="@+id/place3"
            android:background="@drawable/complaintsview"
            android:weightSum="2">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:src="@drawable/monumentjaigarhfort"
                android:scaleType="fitXY"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title3"
                android:textAllCaps="false"
                android:id="@+id/name3"
                android:gravity="center"
                android:textSize="25sp"
                android:layout_marginRight="10dp"
                android:textColor="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:id="@+id/place4"
            android:background="@drawable/complaintsview"
            android:weightSum="2">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:src="@drawable/monumentjalmahal"
                android:scaleType="fitXY"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title4"
                android:textAllCaps="false"
                android:id="@+id/name4"
                android:gravity="center"
                android:textSize="25sp"
                android:layout_marginRight="10dp"
                android:textColor="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:id="@+id/place5"
            android:background="@drawable/complaintsview"
            android:weightSum="2">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:src="@drawable/monumentjantarmantar"
                android:scaleType="fitXY"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title5"
                android:textAllCaps="false"
                android:id="@+id/name5"
                android:gravity="center"
                android:textSize="25sp"
                android:layout_marginRight="10dp"
                android:textColor="@color/white"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
