<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgmin"
    android:weightSum="4"
    tools:context="com.example.ht.citizenservice.TimeLineViewActv">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.github.vipulasri.timelineview.TimelineView
            android:id="@+id/line1"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:line="@color/colorPrimary"
            app:lineOrientation="vertical"
            app:linePadding="3dp"
            app:lineSize="3dp"
            app:marker="@drawable/timeline_ic_marker"
            app:markerInCenter="true"
            app:markerSize="20dp" />

        <com.daasuu.bl.BubbleLayout
            android:id="@+id/bubble1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            app:contentPadding="15dp"
            android:layout_gravity="center_vertical"
            android:padding="5dp"
            app:bl_arrowWidth="15dp"
            app:bl_arrowHeight="15dp"
            app:bl_arrowDirection="left_center"
            app:bl_arrowPosition="16dp"
            app:bl_cornersRadius="19dp"
            app:bl_strokeWidth="2dp"
            app:bl_bubbleColor="@android:color/white"
            app:bl_strokeColor="@color/colorPrimaryDark">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:layout_marginLeft="7dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/date1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="24 JAN"/>

                <TextView
                    android:id="@+id/text1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColor="@android:color/black"
                    android:text="@string/step1"/>

            </LinearLayout>

        </com.daasuu.bl.BubbleLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.github.vipulasri.timelineview.TimelineView
            android:id="@+id/line2"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:line="@color/colorPrimary"
            app:lineOrientation="vertical"
            app:linePadding="3dp"
            app:lineSize="3dp"
            app:marker="@drawable/timeline_ic_marker"
            app:markerInCenter="true"
            app:markerSize="20dp" />

        <com.daasuu.bl.BubbleLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            app:contentPadding="15dp"
            android:layout_gravity="center_vertical"
            android:padding="5dp"
            app:bl_arrowWidth="15dp"
            app:bl_arrowHeight="15dp"
            app:bl_arrowDirection="left_center"
            app:bl_arrowPosition="16dp"
            app:bl_cornersRadius="19dp"
            app:bl_strokeWidth="2dp"
            app:bl_bubbleColor="@android:color/white"
            app:bl_strokeColor="@color/colorPrimaryDark">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:layout_marginLeft="7dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/date2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="24 JAN"/>

                <TextView
                    android:id="@+id/text2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColor="@android:color/black"
                    android:text="@string/step2"/>

            </LinearLayout>

        </com.daasuu.bl.BubbleLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.github.vipulasri.timelineview.TimelineView
            android:id="@+id/line3"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:line="@color/colorPrimary"
            app:lineOrientation="vertical"
            app:linePadding="3dp"
            app:lineSize="3dp"
            app:marker="@drawable/timeline_ic_marker"
            app:markerInCenter="true"
            app:markerSize="20dp" />

        <com.daasuu.bl.BubbleLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            app:contentPadding="15dp"
            android:layout_gravity="center_vertical"
            android:padding="5dp"
            app:bl_arrowWidth="15dp"
            app:bl_arrowHeight="15dp"
            app:bl_arrowDirection="left_center"
            app:bl_arrowPosition="16dp"
            app:bl_cornersRadius="19dp"
            app:bl_strokeWidth="2dp"
            app:bl_bubbleColor="@android:color/white"
            app:bl_strokeColor="@color/colorPrimaryDark">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:layout_marginLeft="7dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/date3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="24 JAN"/>

                <TextView
                    android:id="@+id/text3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColor="@android:color/black"
                    android:text="@string/step3"/>

            </LinearLayout>

        </com.daasuu.bl.BubbleLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.github.vipulasri.timelineview.TimelineView
            android:id="@+id/line4"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:line="@color/colorPrimary"
            app:lineOrientation="vertical"
            app:linePadding="3dp"
            app:lineSize="3dp"
            app:marker="@drawable/timeline_ic_marker"
            app:markerInCenter="true"
            app:markerSize="20dp" />

        <com.daasuu.bl.BubbleLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            app:contentPadding="15dp"
            android:layout_gravity="center_vertical"
            android:padding="5dp"
            app:bl_arrowWidth="15dp"
            app:bl_arrowHeight="15dp"
            app:bl_arrowDirection="left_center"
            app:bl_arrowPosition="16dp"
            app:bl_cornersRadius="19dp"
            app:bl_strokeWidth="2dp"
            app:bl_bubbleColor="@android:color/white"
            app:bl_strokeColor="@color/colorPrimaryDark">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:layout_marginLeft="7dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/date4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="24 JAN"/>

                <TextView
                    android:id="@+id/text4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColor="@android:color/black"
                    android:text="@string/step4"/>

            </LinearLayout>

        </com.daasuu.bl.BubbleLayout>

    </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:fabSize="normal"
        app:srcCompat="@android:drawable/ic_menu_send" />

</LinearLayout>
